tests/NormalTests/paczka1/small_fuzzy/69111545.err
Error in line 2: maBux A169 12,0
Error in line 13: tmPpfZssEg A169 44,8
